# Image_Classification_Pneumonia

./: README.md  pyproject.toml
notebooks/: 01_exploration.ipynb  02_preprocessing.ipynb  03_baseline_model.ipynb  03_modelling.ipynb  04_model.ipynb  05_compare_models.ipynb  model_nn_2.pth
src/core/: classes.py  plot.py
