[project]
name = "image_classification_pneumonia"
version = "0.1.0"
description = "We use a kaggle dataset consisting of labelled images to train artificial neural networks. "
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.0.1",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "duckdb>=1.4.1",
    "scikit-learn>=1.7.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "pip>=26.0.1",
    "opencv-python>=4.13.0.92",
]

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "core"
